added new text for about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 <body>
   <div class="main-content">
   {{>header}}
+    <p>This site was created by Eoin Kelly. It uses data from Mapbox.com amd Weatherstack.com to be able to get weather updates</p>
     <img class="portrait" src="./img/mk.jpg" alt="">
   </div>
   {{>footer}} 
